--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - name: Set the Build number
+        id: calculated_build_number
+        env:
+          NUM: ${{ github.run_number }}
+        run: echo ::set-output name=build_n::$(($NUM+93))
       - name: Set up JDK 17
         uses: actions/setup-java@v1
         with:
@@ -22,4 +27,5 @@ jobs:
           NEXUS_USERNAME: ${{ secrets.NEXUS_USERNAME }}
           NEXUS_PASSWORD: ${{ secrets.NEXUS_PASSWORD }}
           OPTIMIZE_FOR_CI_CD: "1"
+          BUILD_NUMBER: ${{ steps.calculated_build_number.outputs.build_n }}
 
